# sp1-django

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py
app/: context_processors.py  urls.py  views.py
app/templates/: page.html
app/templates/app/: page.html
app/templatetags/: demo_tags.py
app1/templates/: page.html
sp1_demo/: asgi.py  settings.py  urls.py  wsgi.py
templates/: 404.html  500.html  auth_page.html  base.html  index.html  page.html
templates/app/: demo-page.html  page.html
templates/flatpages/: default.html
templates/registration/: login.html  signup.html
